Fixed bug where scrollbars were incorrectly showing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,6 +139,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 body.scroll-disabled {
@@ -533,7 +534,9 @@ section {
 
 /* Miscellaneous */
 /* Hide scrollbar for Chrome, Safari and Opera */
-.horizontal-scroll::-webkit-scrollbar {
+.horizontal-scroll::-webkit-scrollbar,
+.project-screenshot-container::-webkit-scrollbar,
+.project-links::-webkit-scrollbar {
   display: none;
 }
 
